# TGParser

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.cursor/: hooks.json  mcp.json  session-compliance.json
.cursor/agents/: analyst.md  architect.md  code-reviewer.md  code-simplifier.md  codebase-explorer.md  critic.md  debugger.md  designer.md  document-specialist.md  executor.md  git-master.md  planner.md  qa-tester.md  scientist.md  security-reviewer.md  test-engineer.md  tracer.md  verifier.md  writer.md
.cursor/hooks/: README.md  audit-compliance.mjs  install-user-hooks.ps1  mark-sequential-thinking.mjs  policy-manifest.json  quality-after-file-edit.mjs  quality-after-mcp-execution.mjs  quality-after-shell-execution.mjs  quality-before-mcp-execution.mjs  quality-before-shell-execution.mjs  quality-post-tool-use.mjs  quality-pre-tool-use.mjs  quality-subagent-start.mjs  require-preflight-subagent.mjs  require-preflight.mjs  session-start.mjs  test-hooks.mjs
.cursor/rules/: 00-agent-preflight.mdc  00-project-overview.mdc  AGENT-COMPLIANCE-TESTS.md
.cursor/skills/: INVENTORY.md
deploy/windows/: Register-TldTasks.ps1
docs/engineering/: CHANGE_EVIDENCE.md  CI_OBSERVE_ONLY.md  GIT_HOSTING_PREREQUISITE.md  LLM_ASSURANCE_MODEL.md  LLM_QUALITY_RECOVERY.md  MVP_RELEASE_EVIDENCE.md  README.md  WINDOWS_SMOKE_CHECKLIST.md
docs/prd/: DECISION_LOG.md  PHASE0_RESOLUTION_REGISTER.md  README.md  TRACEABILITY.md
schemas/quality/: capability-fixture.schema.json  evidence-claim.schema.json  journal-event.schema.json  task-contract.schema.json
src/telegram_lead_discovery/: __init__.py  main.py
tests/integration/: test_backup_restore.py  test_dashboard_ui.py  test_notifications.py  test_outbox_idempotency.py  test_pipeline_lead.py  test_retention_purge.py  test_shadow_e2e.py  (+3 more)
КОМБИНАТ/: .gitignore  AGENTS.md  package-lock.json  package.json  tsconfig.tsbuildinfo
(+213 files in other folders)
